force-app/main/default/objects/inv_shipment_summary_vw__x/inv_shipment_summary_vw__x.object-meta.xml
<CustomObject>
    <description>inv_shipment_summary_vw</description>
    <label>inv_shipment_summary_vw</label>
    <pluralLabel>inv_shipment_summary_vw</pluralLabel>
</CustomObject>