force-app/main/default/objects/inv_shipment_summary_vw__x/fields/country_code__c.field-meta.xml
<CustomField>
    <fullName>country_code__c</fullName>
    <description>country_code</description>
    <label>country_code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>