force-app/main/default/objects/inv_shipment_summary_vw__x/fields/days_past__c.field-meta.xml
<CustomField>
    <fullName>days_past__c</fullName>
    <description>days_past</description>
    <label>days_past</label>
    <length>10</length>
    <type>Text</type>
</CustomField>