force-app/main/default/objects/inv_shipment_summary_vw__x/fields/invoice_status__c.field-meta.xml
<CustomField>
    <fullName>invoice_status__c</fullName>
    <description>invoice_status</description>
    <label>invoice_status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>