force-app/main/default/objects/inv_shipment_summary_vw__x/fields/invoice_value_amt_us__c.field-meta.xml
<CustomField>
    <fullName>invoice_value_amt_us__c</fullName>
    <description>invoice_value_amt_us</description>
    <label>invoice_value_amt_us</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>