force-app/main/default/objects/inv_shipment_summary_vw__x/fields/partial_full_code__c.field-meta.xml
<CustomField>
    <fullName>partial_full_code__c</fullName>
    <description>partial_full_code</description>
    <label>partial_full_code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>